<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ui.viva.VivaMenuActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/oyna_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/black"
        style="@style/MenuButton"
        android:text="@string/menu_start"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/oyna_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/black"
        style="@style/MenuButton"
        android:text="@string/menu_result"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/oyna_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/black"
        style="@style/MenuButton"
        android:text="@string/menu_exit"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_sensor_title"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:gravity="center"
        android:layout_marginTop="20dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/oyna_sensor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/black"
        style="@style/MenuButton"
        android:text="@string/menu_sensor_default"/>

</LinearLayout>