<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/ic_rounded_dialog"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_result_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/result_title"/>

    <TextView
        android:id="@+id/dialog_result_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="28sp"
        android:textColor="@color/black"
        android:layout_marginBottom="20dp"
        tools:text="Result" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/dialog_result_reload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/black"
        style="@style/MenuButton"
        android:text="@string/result_reload"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/dialog_result_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/black"
        style="@style/MenuButton"
        android:layout_marginBottom="100dp"
        android:text="@string/result_exit"/>

</LinearLayout>